--- a/urlshortener/src/main/resources/application.properties
+++ b/urlshortener/src/main/resources/application.properties
@@ -1,24 +1,6 @@
-#server.port=8080
-
+spring.profiles.active=dev
 management.security.enabled=false
-spring.datasource.name=urlshortener
-spring.jpa.show-sql=true
 
-#H2 settings
-spring.h2.console.path=/h2-console
-
-#Postgres SQL settings (Recommended to use in Docker environment)
-#spring.datasource.url=jdbc:postgresql://database:5432/urlshortener
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 log4j.rootLogger=DEBUG, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
