--- a/urlshortener/Dockerfile.spring
+++ b/urlshortener/Dockerfile.spring
@@ -6,4 +6,4 @@ RUN mvn -f /usr/src/app/pom.xml clean package -DskipTests=true
 FROM openjdk:13-jdk-alpine
 COPY --from=build /usr/src/app/target/urlshortener-0.0.1-SNAPSHOT.jar /usr/src/app/urlshortener-0.0.1-SNAPSHOT.jar
 #EXPOSE 8080
-ENTRYPOINT ["java","-jar","/usr/src/app/urlshortener-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod", "/usr/src/app/urlshortener-0.0.1-SNAPSHOT.jar"]
